--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.digitaleagle.mightymarks.kids.mighty_marks_kids">
    <application
-        android:label="mighty_marks_kids"
+        android:label="Mighty Marks Kids"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
