--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.0
+  #  There's a pug in this, so I had to do it manually with: https://www.geeksforgeeks.org/flutter-changing-app-icon/
+  #flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
@@ -93,3 +95,8 @@ flutter:
    - family: Luckiest Guy
      fonts:
        - asset: fonts/LuckiestGuy.ttf
+
+flutter_icons:
+  android: false
+  ios: true
+  image_path: "images/app-icon.png"
