--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -36,6 +36,8 @@ dependencies:
   flutter_svg: ^1.0.0
   #  There's a pug in this, so I had to do it manually with: https://www.geeksforgeeks.org/flutter-changing-app-icon/
   #flutter_launcher_icons: ^0.9.2
+  # for saving settings and progress
+  shared_preferences: ^2.0.12
 
 dev_dependencies:
   flutter_test:
