--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.0
-  #  There's a pug in this, so I had to do it manually with: https://www.geeksforgeeks.org/flutter-changing-app-icon/
+  #  There's a bug in this, so I had to do it manually with: https://www.geeksforgeeks.org/flutter-changing-app-icon/
   #flutter_launcher_icons: ^0.9.2
   # for saving settings and progress
   shared_preferences: ^2.0.12
